--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "manifest_version": 2,
 
   "name": "Chrome Audio Capture",
-  "description": "This extension captures the audio on the current tab and saves the output file on your computer when the capture is complete",
+  "description": "__MSG_extension_description__",
+  "default_locale": "en",
   "version": "1.1.1",
   "icons": {
     "128":"icon.png"
@@ -11,7 +12,7 @@
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html",
-    "default_title": "Open Chrome Audio Capture interface"
+    "default_title": "__MSG_extension_action_title__"
   },
   "options_page": "options.html",
   "background": {
